--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CineFlix Lesson Template</title>
+    <title>CineFlix Lesson Template React 10</title>
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon">
 </head>
 
